--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,16 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "ES2022",
-    "module": "preserve"
+    "module": "preserve",
+    "baseUrl": "./",
+    "paths": {
+      "primeng/*": [
+        "node_modules/primeng/*"
+      ],
+      "primeicons/*": [
+        "node_modules/primeicons/*"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
