--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.0.6",
+    "@angular/cdk": "^20.0.5",
     "@angular/common": "^20.0.0",
     "@angular/compiler": "^20.0.0",
-    "@angular/core": "^20.0.0",
+    "@angular/core": "^20.0.6",
     "@angular/forms": "^20.0.0",
+    "@angular/material": "^20.0.5",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
     "bootstrap": "^5.3.7",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.8.1",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
